<resources>
    <string name="app_name">课堂人脸识别系统</string>
    <string name="action_settings">设置</string>

    <string name="banji_info">班级信息</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="about">Develop by Darkstarslyp</string>
    <string name="take_picture_detect">拍照识别</string>
    <string name="dynamatic_detect">动态识别</string>
    <string name="class_info_manager">班级信息管理</string>
    <string name="add_class">添加</string>
    <string name="param_error">参数错误</string>
    <string name="btn_start_to_detect">开始检测</string>
    <string name="not_take_picture">未拍摄照片</string>
    <string name="student_info_detect">学生信息识别</string>
    <string name="failed_to_detect">检测失败</string>
    <string name="error">数据出错</string>
    <string name="select_pic_detect">照片识别</string>
    <string name="not_select_picture">未选取照片</string>
    <string name="create_person">创建人脸</string>
    <string name="save">保存</string>
    <string name="class_id">班级编号:</string>
    <string name="class_des">班级人数:</string>
    <string name="add_class_info">添加班级信息</string>
    <string name="please_edit_full_info">请填写完整信息</string>
    <string name="create_class_info_success">创建班级信息成功</string>
    <string name="refresh">刷新</string>
    <string name="student_id">学生编号：</string>
    <string name="student_name">学生姓名：</string>
    <string name="upload_image">上传证件照</string>
    <string name="student_info_manager">学生信息管理</string>
    <string name="add_student_info">添加学生信息</string>
    <string name="create_student_info_success">创建学生信息成功</string>
    <string name="delete_student_tip">删除</string>
    <string name="delete_all_face">删除所有的Face</string>
    <string name="add_face">添加Face</string>
    <string name="cancel">取消</string>
    <string name="delete_student_failed">删除学生失败</string>
    <string name="delete_student_all_face_failed">删除所有Face失败</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_class_failed">删除该班级失败</string>
    <string name="select_pic">选择照片</string>
    <string name="please_select_zjz">请选择证件照</string>
    <string name="add_student_image">添加学生照</string>
    <string name="add_student_image_success">添加学生Face成功</string>
    <string name="detect_error">识别错误</string>
    <string name="face_num">Face数量：</string>
    <string name="train_person">Train Student</string>
    <string name="train_class">Train Class</string>
    <string name="train_class_success">Train Class Success</string>
    <string name="train_class_failed">Train Class Failed</string>
    <string name="train_student_failed">Train Student Failed</string>
    <string name="train_student_success">Train Student Success</string>
    <string name="not_detect_face">未检测到人脸信息</string>
    <string name="image_size_to_big">照片尺寸过大</string>
    <string name="have_detect_face_num_tip">已识别人脸数量:</string>
    <string name="start_to_match">开始匹配</string>
    <string name="input_class_id">输入班级编号</string>
    <string name="person_face_match">人脸匹配</string>
    <string name="confidence_tip">可信度：</string>
</resources>
