<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/normal_button_bg"
    android:paddingBottom="10dp"
    >
    <TextView
        android:id="@+id/student_id_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/student_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="B12070521"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/student_id_tip"
        android:layout_toRightOf="@+id/student_id_tip"
        android:layout_toEndOf="@+id/student_id_tip" />
    <TextView
        android:id="@+id/student_tag_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:layout_below="@+id/student_id_tip"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/student_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="李运平"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/student_tag_tip"
        android:layout_alignLeft="@+id/student_id"
        android:layout_alignStart="@+id/student_id" />

    <TextView
        android:id="@+id/face_num_tip"
        android:text="@string/face_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/student_tag_tip"
        android:layout_marginRight="10dp"
        />
</RelativeLayout>