<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/tool_bar_layout"/>
    <RelativeLayout
        android:background="@color/main_page_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginLeft="10dp"
            android:text="@string/have_detect_face_num_tip"
            android:id="@+id/face_num_tip"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/face_num"
            android:text=""
            android:layout_marginTop="10dp"
            android:textColor="@color/app_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/start_to_match"
            android:layout_toStartOf="@+id/start_to_match" />
        <LinearLayout
            android:id="@+id/input_container"
            android:layout_below="@+id/face_num_tip"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/input_class_id"
                android:text="@string/input_class_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/class_id"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:inputType="number"
                android:background="@drawable/edit_text_border_color"
              />
        </LinearLayout>


        <Button
            android:id="@+id/start_to_match"
            android:text="@string/start_to_match"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/normal_button_bg"
            android:layout_below="@+id/input_container"
            />
        <ListView
            android:id="@+id/list_view"
            android:divider="@color/colorPrimary"
            android:dividerHeight="2px"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/start_to_match"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</LinearLayout>