<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/tool_bar_layout"/>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_page_bg"
        >
        <TextView
            android:id="@+id/class_id_tip"
            android:text="@string/class_id"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/class_id"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:layout_below="@id/class_id_tip"
            android:hint="120705"
            android:inputType="number"
            android:background="@drawable/edit_text_border_color"
            />
        <TextView
            android:id="@+id/class_des_tip"
            android:text="@string/class_des"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/class_id"

            />
        <EditText
            android:id="@+id/class_des"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:layout_below="@id/class_des_tip"
            android:hint="27"
            android:inputType="number"
            android:background="@drawable/edit_text_border_color"
            />

        <Button
            android:id="@+id/save"
            android:text="@string/save"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/class_des"
            android:background="@drawable/normal_button_bg"
            android:layout_centerHorizontal="true"
            />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:interpolator="@android:interpolator/accelerate_decelerate"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            style="@style/CustomProgressBar"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            />
    </RelativeLayout>
</LinearLayout>

